routing + directory cards

--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,12 @@
     transform: rotate(360deg);
   }
 }
+
+.nav-click {
+  color: white;
+}
+
+.directory-container {
+  display: flex;
+  flex-direction: row;
+}
